# finalproject_Rozdorozhnyi_M25_555

./: .gitignore  README.md  final_demo.cast  main.py  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
src/wallet_app/: main.py
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
