[tool.poetry]
name = "finalproject_Rozdorozhnyi_M25_555"
version = "0.1.0"
description = "Console currency wallet application"
authors = ["Ilya Rozdorozhnyi <you@example.com>"]
readme = "README.md"

packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.11.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

